--- a/NemoRx1/.classpath
+++ b/NemoRx1/.classpath
@@ -2,14 +2,14 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/SAILAJA S/Desktop/selenium-java-3.141.59 (1)/client-combined-3.141.59.jar"/>
-	<classpathentry kind="lib" path="C:/Users/SAILAJA S/Desktop/selenium-java-3.141.59 (1)/client-combined-3.141.59-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/SAILAJA S/Desktop/selenium-java-3.141.59 (1)/libs/byte-buddy-1.8.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/SAILAJA S/Desktop/selenium-java-3.141.59 (1)/libs/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/SAILAJA S/Desktop/selenium-java-3.141.59 (1)/libs/guava-25.0-jre.jar"/>
-	<classpathentry kind="lib" path="C:/Users/SAILAJA S/Desktop/selenium-java-3.141.59 (1)/libs/okhttp-3.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/SAILAJA S/Desktop/selenium-java-3.141.59 (1)/libs/okio-1.14.0.jar"/>
-	<classpathentry kind="lib" path="D:/testng-6.8.5.jar"/>
-	<classpathentry kind="lib" path="D:/jcommander.jar"/>
+	<classpathentry kind="lib" path="E:/Rathna Pronix/Softwares/Selenium_jar/client-combined-3.141.59.jar"/>
+	<classpathentry kind="lib" path="E:/Rathna Pronix/Softwares/Selenium_jar/client-combined-3.141.59-sources.jar"/>
+	<classpathentry kind="lib" path="E:/Rathna Pronix/Softwares/Selenium_jar/libs/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="E:/Rathna Pronix/Softwares/Selenium_jar/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="E:/Rathna Pronix/Softwares/Selenium_jar/libs/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="E:/Rathna Pronix/Softwares/Selenium_jar/libs/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="E:/Rathna Pronix/Softwares/Selenium_jar/libs/okio-1.14.0.jar"/>
+	<classpathentry kind="lib" path="E:/Rathna Pronix/Softwares/jcommander.jar/jcommander.jar"/>
+	<classpathentry kind="lib" path="E:/Rathna Pronix/Softwares/testng-6.8.5.jar/testng-6.8.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
