--- a/NemoRx1/src/com/NemoRx/TestScripts/TestDescription.properties
+++ b/NemoRx1/src/com/NemoRx/TestScripts/TestDescription.properties
@@ -4,3 +4,4 @@ TestScript_03 == Verifying Side Menu Options
 TestScript_04 == Verifying search patient and adding medication  to that patient
 TestScript_05 == Verifying RxPrintSetting
 TestScript_06 == Validating  adding patient and adding medication to that patient 
+TestScript_07 == Verifying Alert Bell
