Test8 Buttons Verification

--- a/NemoRx1/src/com/NemoRx/TestScripts/TestDescription.properties
+++ b/NemoRx1/src/com/NemoRx/TestScripts/TestDescription.properties
@@ -5,3 +5,4 @@ TestScript_04 == Verifying search patient and adding medication  to that patient
 TestScript_05 == Verifying RxPrintSetting
 TestScript_06 == Validating  adding patient and adding medication to that patient 
 TestScript_07 == Verifying Alert Bell
+TestScript_08 == Medications Button Verification patient chart 
