--- a/NemoRx1/src/com/NemoRx/TestScripts/TestDescription.properties
+++ b/NemoRx1/src/com/NemoRx/TestScripts/TestDescription.properties
@@ -1,8 +1,8 @@
 TestScript_01 == Verifying Login and Logout with different Users
 TestScript_02 == Validating Adding working hour and Deleting working hour
 TestScript_03 == Verifying Side Menu Options
-TestScript_04 == Verifying search patient and adding medication  to that patient
+TestScript_04 == Verifying search patient and adding medication and Allergies  to that patient
 TestScript_05 == Verifying RxPrintSetting
-TestScript_06 == Validating  adding patient and adding medication to that patient 
+TestScript_06 == Validating  adding patient and adding medication to that patient // Button Verifications also
 TestScript_07 == Verifying Alert Bell
 TestScript_08 == Medications Button[Send/Edit/Delete] Verification patient chart // Allergy Buttons[Edit/Delete] Verification on patient chart 
